rest of the changes and bug fixing

--- a/login.html
+++ b/login.html
@@ -14,6 +14,18 @@
         .d__grid{
             display: grid;
         }
+        .global_input{
+            position: relative;
+        }
+      #name-error,
+      #email-error,
+      #password-error{
+        position: absolute;
+        bottom: -22px;
+        left: 0;
+        color: red !important;
+        font-size: 14px;
+      }
         @media screen and (max-width: 992px) {
             /* .get_started_im{
                 display: none;
