--- a/finance-assurance-Benefits.html
+++ b/finance-assurance-Benefits.html
@@ -535,7 +535,7 @@
                             </div>
                             <div
                                 class="compliance-card1 border-r-12 p-3 border  h-100 d-flex flex-column justify-content-between mt-3">
-                                <form class="assurance-benefits-form" action="#" method="POST">
+                                <form class="assurance-benefits-form" action="#" method="">
                                     <div class="row g-4">
                                         <div class="col-12 col-md-6">
                                             <div class="d-flex flex-column">
@@ -571,7 +571,7 @@
                                                     <input class="form-control benefits-forms-inputs" id="Address"
                                                         type="text"
                                                         placeholder="ABC, Street 123, Road XYZ, City, State">
-                                                    <div class="position-absolute " style="left: 10px; top:7px;"><a
+                                                    <div class="position-absolute " style="left: 10px; top:9px;"><a
                                                             href="#"><img
                                                                 src="assets/images/employer-ease-pics/location-dot.svg"
                                                                 alt=""></a>
