--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description"
+    <meta name="description"
         content="Discover top-notch appliances at Zero Tolerance. From kitchen essentials to smart gadgets, find everything you need for a modern lifestyle. Shop now for reliability and performance." />
     <meta name="title" content="Zero Tolerance: Your Destination for High-Quality Appliances" />
     <link rel="icon" href="assets/images/employer-ease-pics/rocket.svg">
@@ -29,6 +30,7 @@
             top: 18px;
             left: 20%;
         }
+
         @media (max-width: 520px) {
             .location-card {
                 left: 0px;
@@ -36,6 +38,7 @@
         }
     </style>
 </head>
+
 <body>
     <section class="hero-section">
         <div class="main-dashbord">
@@ -316,8 +319,8 @@
                                     <h2 class="header-title text-dark">Dashboard</h2>
                                     <form action="">
                                         <div class="position-relative">
-                                            <input class="header-input form-control bg-transparent pe-5" type="text"
-                                                placeholder="Search" />
+                                            <input class="header-input border1 form-control bg-transparent pe-5"
+                                                type="text" placeholder="Search" />
                                             <div class="position-absolute" style="top: 9px; left: 16px;">
                                                 <img class="h-100 w-100"
                                                     src="assets/images/employer-ease-pics/magnifying-glass.svg"
@@ -442,21 +445,26 @@
                                 data-bs-target="#offcanvasRightUnique" aria-controls="offcanvasRightUnique">
                                 <img src="assets/images/employer-ease-pics/user-profile.svg" alt="">
                             </button>
-                            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRightUnique" aria-labelledby="offcanvasRightLabel">
+                            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRightUnique"
+                                aria-labelledby="offcanvasRightLabel">
                                 <div class="offcanvas-header">
-                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                        aria-label="Close"></button>
                                 </div>
                                 <div class="offcanvas-body">
                                     <div class="">
                                         <div class="w-100" style="gap: 16px">
                                             <div class="dropdown">
-                                                <button class="d-flex align-items-center border-0 bg-transparent" data-bs-toggle="dropdown"
-                                                    aria-expanded="false" type="button" style="gap: 8px">
+                                                <button class="d-flex align-items-center border-0 bg-transparent"
+                                                    data-bs-toggle="dropdown" aria-expanded="false" type="button"
+                                                    style="gap: 8px">
                                                     <div
                                                         class="icon-placeholder rounded-circle d-flex align-items-center justify-content-center">
-                                                        <img src="assets/images/employer-ease-pics/header-profile.svg" alt="">
+                                                        <img src="assets/images/employer-ease-pics/header-profile.svg"
+                                                            alt="">
                                                     </div>
-                                                    <i class="fa fa-chevron-down text-dark" style="font-size: 14px;"></i>
+                                                    <i class="fa fa-chevron-down text-dark"
+                                                        style="font-size: 14px;"></i>
                                                 </button>
                                                 <ul class="dropdown-menu language-dropdown">
                                                     <li>
@@ -475,11 +483,12 @@
                                             </div>
                                             <hr>
                                             <div class="dropdown">
-                                                <button class="d-block border-0 bg-transparent dropdown-toggle" data-bs-toggle="dropdown"
-                                                    aria-expanded="false" type="button">
+                                                <button class="d-block border-0 bg-transparent dropdown-toggle"
+                                                    data-bs-toggle="dropdown" aria-expanded="false" type="button">
                                                     <span class="">
                                                         <img class="me-2"
-                                                            src="assets/images/employer-ease-pics/language-switch.svg" alt="" />Eng<sub>
+                                                            src="assets/images/employer-ease-pics/language-switch.svg"
+                                                            alt="" />Eng<sub>
                                                             (US)</sub>
                                                     </span>
                                                 </button>
@@ -493,9 +502,10 @@
                                     <div class="d-flex flex-column gap-3 mt-3">
                                         <div class="d-flex gap-3 align-items-center">
                                             <div class="dropdown">
-                                                <button class="d-block border-0 bg-transparent" data-bs-toggle="dropdown"
-                                                    aria-expanded="false" type="button">
-                                                    <img class="mt-2" src="assets/images/employer-ease-pics/cart.svg" alt="" />
+                                                <button class="d-block border-0 bg-transparent"
+                                                    data-bs-toggle="dropdown" aria-expanded="false" type="button">
+                                                    <img class="mt-2" src="assets/images/employer-ease-pics/cart.svg"
+                                                        alt="" />
                                                     <span class="dot active"></span>
                                                 </button>
                                             </div>
@@ -503,13 +513,14 @@
                                         </div>
                                         <div class="d-flex align-items-center gap-3">
                                             <div class="dropdown ms-1">
-                                                <button class="d-block border-0 bg-transparent" data-bs-toggle="dropdown"
-                                                    aria-expanded="false" type="button">
+                                                <button class="d-block border-0 bg-transparent"
+                                                    data-bs-toggle="dropdown" aria-expanded="false" type="button">
                                                     <img src="assets/images/employer-ease-pics/calendar.svg" alt="" />
                                                     <span class="dot active"></span>
                                                 </button>
                                             </div>
-                                            <label class="fs_14 fw_500 tertiary-black j_family" for="Cart">Calendar</label>
+                                            <label class="fs_14 fw_500 tertiary-black j_family"
+                                                for="Cart">Calendar</label>
                                         </div>
                                     </div>
                                 </div>
@@ -923,4 +934,5 @@
         });
     </script>
 </body>
+
 </html>
