--- a/project-management.html
+++ b/project-management.html
@@ -8,6 +8,7 @@
     <meta name="title" content="Zero Tolerance: Your Destination for High-Quality Appliances" />
     <link rel="icon" href="assets/images/employer-ease-pics/rocket.svg">
     <!---------------------- Bootstrap Cdn---------------------->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
         crossorigin="anonymous"></script>
